# sharesp231

./: .shsh  README.md
Meta502/03-helloworld-fuse/: hello  hello.c
Meta502/WEEK04/: 2006524896_getopt.c  Makefile
Meta502/fuse-tutorial-2018-02-04/: Makefile  config.status
Meta502/fuse-tutorial-2018-02-04/example/rootdir/: cbkadal.txt
Meta502/fuse-tutorial-2018-02-04/html/: Makefile
Meta502/fuse-tutorial-2018-02-04/src/: Makefile  bbfs
ReeyaDono/03-helloworld-fuse/: hello  hello.c
ReeyaDono/05-WEEK/: Makefile.am  README.md  configure.ac  share.c  share.h
ReeyaDono/WEEK04/: 2006473844-getopt.c  Makefile  test.sh
ReeyaDono/fuse-tutorial-2018-02-04/: Makefile  config.status
ReeyaDono/fuse-tutorial-2018-02-04/example/mountdir/: ReeyaDono.txt
ReeyaDono/fuse-tutorial-2018-02-04/html/: Makefile
ReeyaDono/fuse-tutorial-2018-02-04/src/: Makefile  bbfs
adillahptr/03-helloworld-fuse/: hello.c
adillahptr/05-WEEK/: Makefile.am  configure.ac  share.c  share.h
adillahptr/WEEK04/: 2006529114-getopt.c  Makefile  test.sh
adillahptr/fuse-tutorial-2018-02-04/: Makefile  config.status
adillahptr/fuse-tutorial-2018-02-04/example/rootdir/: adillahptr.txt
adillahptr/fuse-tutorial-2018-02-04/html/: Makefile
adillahptr/fuse-tutorial-2018-02-04/src/: Makefile  bbfs
bintangbhp/03-helloworld-fuse/: hello  hello.c
bintangbhp/03-helloworld-fuse/fuse-tutorial-2018-02-04/: Makefile  config.status
bintangbhp/03-helloworld-fuse/fuse-tutorial-2018-02-04/html/: Makefile
bintangbhp/03-helloworld-fuse/fuse-tutorial-2018-02-04/src/: Makefile  bbfs
bintangbhp/05-WEEK/: 000-README.txt  Makefile.am  configure.ac  share.c  share.h
bintangbhp/WEEK04/: 2006462696-getopt.c  Makefile  test.sh
bintangbhp/fuse-tutorial-2018-02-04/: Makefile  config.status
bintangbhp/fuse-tutorial-2018-02-04/example/rootdir/: bintangbhp.txt
bintangbhp/fuse-tutorial-2018-02-04/html/: Makefile
bintangbhp/fuse-tutorial-2018-02-04/src/: Makefile  bbfs
cbkadal/WEEK04/: 1234567890-getopt.c  2106639945-getopt  Makefile  test.sh
fwibisono87/: configure.ac
fwibisono87/03-helloworld-fuse/: Makefile  hello.c
fwibisono87/03-helloworld-fuse/old/: hello
fwibisono87/05-WEEK/: Makefile.am  configure.ac  prog1.c  prog2.c  run.sh  share.h
fwibisono87/05-WEEK/autom4te.cache/: requests
fwibisono87/WEEK04/: 1906350553-getopt  Makefile  output.txt  test.sh
fwibisono87/WEEK05/: prog2.c  share.c
fwibisono87/fuse-tutorial-2018-02-04/: Makefile  config.status
fwibisono87/fuse-tutorial-2018-02-04/html/: Makefile
fwibisono87/fuse-tutorial-2018-02-04/src/: Makefile  bbfs
fwibisono87/fuse-tutorial-2018-02-04/src/.deps/: bbfs.Po  log.Po
haikalrmn/03-helloworld-fuse/: hello  hello.c
haikalrmn/05-WEEK/: Makefile.am  configure.ac  share.c  share.h
haikalrmn/WEEK04/: 2006597891-getopt  2006597891-getopt.c  Makefile
haikalrmn/fuse-tutorial-2018-02-04/: Makefile  config.status
haikalrmn/fuse-tutorial-2018-02-04/example/rootdir/: haikalrmn.txt
haikalrmn/fuse-tutorial-2018-02-04/html/: Makefile
haikalrmn/fuse-tutorial-2018-02-04/src/: Makefile  bbfs
hanifsyuaib/03-helloworld-fuse/: Makefile  hello.c
hanifsyuaib/05-WEEK/: Makefile.am  configure.ac  prog2.c  share.c  share.h
hanifsyuaib/WEEK04/: 2006482003-getopt.c  Makefile  README.txt  test.sh
hanifsyuaib/fuse-tutorial-2018-02-04/: Makefile  config.status
hanifsyuaib/fuse-tutorial-2018-02-04/example/rootdir/: hanifsyuaib.txt
hanifsyuaib/fuse-tutorial-2018-02-04/html/: Makefile
hanifsyuaib/fuse-tutorial-2018-02-04/src/: Makefile  bbfs
nayyara-airlangga/03-helloworld-fuse/: hello.c
nayyara-airlangga/05-WEEK/: 001-RUNNING.txt  Makefile.am  configure.ac  share.c  share.h
nayyara-airlangga/WEEK04/: 2106652070-getopt.c  Makefile  test.sh
nayyara-airlangga/fuse-tutorial-2018-02-04/: Makefile  config.status
nayyara-airlangga/fuse-tutorial-2018-02-04/example/rootdir/: nayyara-airlangga.txt
nayyara-airlangga/fuse-tutorial-2018-02-04/html/: Makefile
nayyara-airlangga/fuse-tutorial-2018-02-04/src/: Makefile  bbfs
rorre/03-helloworld-fuse/: hello.c
rorre/05-WEEK/: 001-MEMO.txt  Makefile.am  configure.ac  share.c  share.h
rorre/WEEK04/: 2106639945-getopt.c  Makefile  test.sh
rorre/fuse-tutorial-2018-02-04/: Makefile  config.status
rorre/fuse-tutorial-2018-02-04/example/rootdir/: rorre.txt
rorre/fuse-tutorial-2018-02-04/html/: Makefile
rorre/fuse-tutorial-2018-02-04/src/: Makefile  bbfs
taufiqulmawarid/03-helloworld-fuse/: hello.c
taufiqulmawarid/05-WEEK/: Makefile.am  configure.ac  share.c  share.h
taufiqulmawarid/05-WEEK/.deps/: share.Po
taufiqulmawarid/WEEK04/: 2006484255-getopt.c  Makefile  test.sh
taufiqulmawarid/fuse-tutorial-2018-02-04/: Makefile  config.status
taufiqulmawarid/fuse-tutorial-2018-02-04/example/mountdir/: taufiqulmawarid.txt
taufiqulmawarid/fuse-tutorial-2018-02-04/html/: Makefile
taufiqulmawarid/fuse-tutorial-2018-02-04/src/: Makefile  bbfs
