# REV01: Sun 12 Mar 2023 18:00
# START: Sat 11 Mar 2023 22:00
#        1         2         3         4         5         6         7
# 34567890123456789012345678901234567890123456789012345678901234567890
# Please complete this file.

bin_PROGRAMS = share
share_SOURCES = share.c

clean-locoal: 
	@rm config.status configure config.log
	@rm Makefile
	@rm -r automa4te.cache/
	@rm aclocal.m4
	@rm compile install-sh missing Makefile.in
