# REV01: Sun 12 Mar 2023 18:00
# START: Sat 11 Mar 2023 22:00
#        1         2         3         4         5         6         7
# 34567890123456789012345678901234567890123456789012345678901234567890
# Please complete this file.

bin_PROGRAMS = prog1 prog2

prog1_SOURCES = prog1.c share.c share.h
prog1_LOADD = 

prog2_SOURCES =prog2.c share.c share.h
prog2_LOADD = 

AM_FLAGS = -std=gnu18

clean-locoal: 
	@rm config.status configure config.log
	@rm Makefile
	@rm -r automa4te.cache/
	@rm aclocal.m4
	@rm compile install-sh missing Makefile.in
