# REV01: Sun 12 Mar 2023 18:00
# START: Sat 11 Mar 2023 22:00
#        1         2         3         4         5         6         7
# 34567890123456789012345678901234567890123456789012345678901234567890
# Please complete this file.

bin_PROGRAMS = prog1 prog2
AM_CPPFLAGS = -I.

prog1_SOURCES = prog1.c
prog1_LDADD = share.o

prog2_SOURCES = prog2.c
prog2_LDADD = share.o

noinst_LIBRARIES = libshare.a
libshare_a_SOURCES = share.c
