dnl REV01: Sun 12 Mar 2023 18:00
dnl START: Sat 11 Mar 2023 22:00
dnl Please complete this file.


AC_INIT([05-WEEK], [1.0], [your_email@example.com])
AM_INIT_AUTOMAKE([-Wall -Werror])
AC_CONFIG_SRCDIR([share.c])
AC_CONFIG_HEADERS([config.h])

AC_PROG_CC
AC_CHECK_HEADERS([stdlib.h])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
