dnl REV01: Sun 12 Mar 2023 18:00
dnl START: Sat 11 Mar 2023 22:00
dnl Please complete this file.

AC_INIT([prog], [1.0])
#LT_INIT

AM_INIT_AUTOMAKE
AC_PROG_CC
# Check for the presence of the shared header file
AC_CHECK_HEADERS([share.h])

# Generate Makefile.in
AC_CONFIG_FILES([Makefile])
AC_OUTPUT

